fix: remove overflow:hidden from html and root to allow modal scroll

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -86,11 +86,9 @@
   }
   html {
     height: 100%;
-    overflow: hidden;
   }
   #root {
     height: 100%;
-    overflow: hidden;
   }
 }
 
